package com.example.doeCerto.domain;

public enum CategoriasInstituicao {
    ONG,
    ESCOLA,
    HOSPITAL,
    IGREJA,
    CULTURA,
    OUTRA;
}
