package com.example.doeCerto.dtos;

public record LoginRequestDTO(String email, String senha, String token) {
}
