package com.example.doeCerto.dtos;

public record ResponseDTO(String nome, String token) {
}
